[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/gui/ObjectProperties.gd" type="Script" id=1]
[ext_resource path="res://res/ui_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.533333, 0.533333, 0.533333, 0.313726 )

[sub_resource type="StyleBoxFlat" id=1382]
bg_color = Color( 0.267578, 0.00522614, 0.0205983, 1 )

[sub_resource type="StyleBoxFlat" id=1383]
bg_color = Color( 0.320312, 0.00850262, 0.00125122, 1 )

[sub_resource type="StyleBoxFlat" id=1384]
bg_color = Color( 0.34668, 0.0101566, 0, 1 )
border_color = Color( 0.345098, 0.00784314, 0, 1 )

[node name="ObjProperties" type="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1024.0
offset_top = -600.0
offset_right = -784.0
offset_bottom = -130.0
grow_horizontal = 2
custom_minimum_size = Vector2( 0, 450 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 322.0

[node name="Values" type="VBoxContainer" parent="MarginContainer"]
offset_right = 220.0
offset_bottom = 312.0
custom_minimum_size = Vector2( 220, 0 )

[node name="ObjectName" type="Label" parent="MarginContainer/Values"]
offset_right = 220.0
offset_bottom = 22.0
custom_minimum_size = Vector2( 0, 22 )
theme_override_styles/normal = SubResource( 1 )
text = "Object Value"
align = 1
valign = 1

[node name="DefaultButton" type="Button" parent="MarginContainer/Values"]
offset_top = 26.0
offset_right = 220.0
offset_bottom = 48.0
theme = ExtResource( 2 )
text = "Set as Default"

[node name="DeleteButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 440.0
offset_right = 230.0
offset_bottom = 462.0
grow_vertical = 2
theme = ExtResource( 2 )
theme_override_styles/hover = SubResource( 1382 )
theme_override_styles/focus = SubResource( 1383 )
theme_override_styles/normal = SubResource( 1384 )
action_mode = 0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/Values/DefaultButton" to="." method="_on_DefaultButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
